src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
            <label>Count</label>
            <type>Picklist</type>
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    <value>
                        <fullName>True</fullName>
                    </value>
                    <value>
                        <fullName>False</fullName>
                    </value>
                </valueSetDefinition>
            </valueSet>
        </fields>
    </CustomObject>