src/objects/CampaignMember/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <formula>1</formula>
    <label>Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>