src/objects/CampaignMember/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <formula>BLANKVALUE( 
(Contact.utm_campaign__c), 
(Lead.utm_campaign__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>utm_campaign</label>
    <type>Text</type>
</CustomField>