src/objects/CampaignMember/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <formula>BLANKVALUE( 
(Contact.utm_content__c), 
(Lead.utm_content__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>utm_content</label>
    <type>Text</type>
</CustomField>