src/objects/CampaignMember/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <formula>BLANKVALUE( 
(Contact.utm_medium__c), 
(Lead.utm_medium__c) 
)</formula>
    <label>utm_medium</label>
    <type>Text</type>
</CustomField>