src/objects/CampaignMember/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <formula>BLANKVALUE( 
(Contact.utm_source__c), 
(Lead.utm_source__c) 
)</formula>
    <label>utm_source</label>
    <type>Text</type>
</CustomField>