src/objects/CampaignMember/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <formula>BLANKVALUE( 
(Contact.utm_term__c), 
(Lead.utm_term__c) 
)</formula>
    <label>utm_term</label>
    <type>Text</type>
</CustomField>